# uit_sandpiles

./: .gitignore  CMakeLists.txt  README.md
src/: BTW3dModel.cpp  BTW3dModel.h  BTWModel.cpp  BTWModel.h  CMakeLists.txt  ForestFireModel.cpp  ForestFireModel.h  ModelUtils.cpp  ModelUtils.h  Simulator.cpp
src/dynamics/: BTWClassicalDynamics.cpp  BTWClassicalDynamics.h  BTWDeterministicNNN.cpp  BTWDeterministicNNN.h  BTWRandom2Dynamics.cpp  BTWRandom2Dynamics.h  DynamicsFactory.cpp  DynamicsFactory.h  ModelDynamics.h
test/: CMakeLists.txt
test/tests/: BTW3dModelTest.cpp  BTW3dModelTest.h  BTWClassicalDynamics.cpp  BTWDeterministicNNNTest.cpp  BTWModelTest.cpp  BTWRandom2Dynamics.cpp  CMakeLists.txt  ForestFireModelTest.cpp  ModelUtilsTest.cpp
